@startuml
title Cyber AI — Class Diagram

skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam shadowing false
skinparam linetype ortho

' ══ Database Entities ══════════════════════════════════════════════════════

class Profile <<Entity>> {
  - id: uuid
  - email: string
  - fullName: string
  - role: user | admin
  - createdAt: string
  - updatedAt: string
}

class UserQuery <<Entity>> {
  - id: uuid
  - userId: uuid
  - query: string
  - source: primary | brave
  - status: success | error | cancelled
  - sessionId: string
  - createdAt: string
}

' ══ Local Storage ══════════════════════════════════════════════════════════

class Session <<Entity>> {
  - id: string
  - name: string
  - createdAt: string
  - updatedAt: string
}

class Message <<Entity>> {
  - id: number
  - role: user | assistant
  - content: string
  - timestamp: string
}

' ══ Hooks ══════════════════════════════════════════════════════════════════

class useAuth <<Hook>> {
  + session: SupabaseSession | null
  + profile: Profile | null
  + loading: boolean
  + isAdmin: boolean
  + signIn(email, password): Promise<void>
  + signUp(email, password, fullName): Promise<void>
  + signOut(): Promise<void>
}

class useChat <<Hook>> {
  + sessions: Session[]
  + activeSession: Session
  + sendMessage(text): Promise<void>
  + deleteSession(id): void
}

class AdminDashboard <<View>> {
  + session: { access_token: string }
  + profile: Profile
  + loadUsers(): Promise<void>
  + updateUserRole(userId, role): Promise<void>
  + deleteUser(userId): Promise<void>
  + loadQueries(): Promise<void>
}

' ══ Relationships ════════════════════════════════════════════════════════

Profile "1" -- "0..*" UserQuery : has
Session "1" -- "0..*" Message : contains

useAuth --> Profile : manages
useChat --> Session : manages
AdminDashboard --> Profile : manages
AdminDashboard --> UserQuery : manages

@enduml
